# ovsy

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.sh  install.sh
agent/: Cargo.toml
agent/src/: chunk.rs  error.rs  lib.rs  prelude.rs  session.rs
agents/music/: .gitignore  Cargo.toml  Ovsy.cache  Ovsy.toml
agents/music/src/: error.rs  lib.rs  main.rs  prelude.rs  settings.rs
agents/music/src/handlers/: mod.rs  play.rs  volume.rs
agents/music/src/utils/: dir.rs
agents/power/: Cargo.toml  Ovsy.cache  Ovsy.toml
agents/power/src/: error.rs  lib.rs  main.rs  power.rs  prelude.rs  settings.rs
agents/power/src/handlers/: cancel.rs  health.rs  mod.rs  power.rs  status.rs
agents/power/src/power/: action.rs  mod.rs  mode.rs  options.rs
agents/system/: Cargo.toml  Ovsy.toml
agents/system/src/: error.rs  lib.rs  main.rs  prelude.rs  settings.rs
agents/system/src/handlers/: call.rs  info.rs  init.rs  mod.rs  ping.rs  power.rs  tool_call.rs  tools.rs  volume.rs
agents/system/src/power/: action.rs  mod.rs  mode.rs  status.rs
agents/system/src/skills/: mod.rs
agents/system/src/theme/: action.rs  mod.rs  mode.rs
agents/system/src/tools/: audio.rs  media.rs  mod.rs  monitor.rs  music.rs  power.rs  theme.rs  volume.rs
agents/system/src/volume/: action.rs  mod.rs  mode.rs  status.rs
agents/writer/src/: settings.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  prelude.rs
crates/cli/src/chat/: action.rs  markdown.rs  mod.rs  render.rs  state.rs  utils.rs
crates/cli/src/cmds/: build.rs  chat.rs  config.rs  mod.rs  refresh.rs  restart.rs  start.rs  status.rs  stop.rs
crates/cli/src/commands/: build.rs  chat.rs  config.rs  health.rs  mod.rs  refresh.rs  restart.rs  start.rs  status.rs  stop.rs  system.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  main.rs  prelude.rs
crates/core/src/handlers/: clear.rs  compact.rs  handle.rs  health.rs  messages.rs  mod.rs  query.rs  session.rs  session_clear.rs  session_compact.rs  session_get.rs  session_query.rs  sessions_clear.rs  sessions_compact.rs  sessions_get.rs  sessions_query.rs  status.rs  update.rs  user.rs  user_sessions.rs  users_sessions.rs
crates/core/src/manager/: agent.rs  handle.rs  mod.rs  task.rs  tasks.rs
crates/core/src/runtime/: mod.rs
crates/core/src/session/: metadata.rs  mod.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: error.rs  main.rs  prelude.rs  settings.rs
crates/kernel/src/chat/: markdown.rs  render.rs  state.rs
crates/kernel/src/commands/: chat.rs  health.rs  mod.rs  server.rs  system.rs
crates/kernel/src/handlers/: health.rs  mod.rs  query.rs
crates/kernel/src/manager/: agent.rs  mod.rs  task.rs  tasks.rs
crates/kernel/src/session/: key.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  prelude.rs
crates/server/src/handlers/: compact.rs  compress.rs  handle.rs  mod.rs  query.rs  refresh.rs  status.rs  update.rs
crates/server/src/manager/: agent.rs  handle.rs  mod.rs  task.rs
crates/share/: Cargo.toml
crates/share/src/: agent_metadata.rs  agent_task.rs  clear_query.rs  compact_query.rs  event.rs  handle_query.rs  lib.rs  messages_query.rs  query.rs  session_id.rs  session_info.rs  settings.rs  skill.rs  status_data.rs
crates/shared/: Cargo.toml
crates/shared/src/: agent_info.rs  chunk.rs  health_data.rs  lib.rs  manifest.rs  ping_data.rs  response.rs  settings.rs  user_query.rs
crates/system-agent/: Cargo.toml
crates/system-agent/src/: error.rs  main.rs  prelude.rs  settings.rs
crates/system-agent/src/handlers/: mod.rs  net.rs
crates/system-agent/src/skills/: mod.rs
crates/system-agent/src/tools/: audio.rs  info.rs  media.rs
default/prompts/: assistant-character.md  delegate-query.md  final-response.md  handle-query.md  summary-results.md  user-character.md
examples/: test_query.rs
prompt/: ai-character.md  handle-query.md  system-prompt.md  user-character.md
src/: cache.rs  database.rs  error.rs  lib.rs  main.rs  manifest.rs  prelude.rs  settings.rs
src/agents/: agent.rs  calls.rs  mod.rs  response.rs
src/handlers/: call.rs  mod.rs  query.rs  tool.rs
src/llm/: llm.rs  mod.rs
src/lms/: lmstudio.rs
src/session/: cached.rs  log.rs  logger.rs  mod.rs  session.rs
src/tools/: manager.rs  mod.rs  tool.rs  tools.rs
src/utils/: lm.rs  lms.rs  mod.rs  tcp.rs  tokens.rs
tools/: Ovsy.toml
tools/home/: Cargo.toml  Ovsy.toml
tools/home/src/: error.rs  lib.rs  prelude.rs
tools/home/src/controller/: controller.rs  mod.rs
tools/home/src/handlers/: mod.rs  play.rs
tools/home/src/remote/: bind.rs  mod.rs
tools/pc/: Cargo.toml  Ovsy.toml
tools/pc-control/: Cargo.toml  Ovsy.toml
tools/pc-control/examples/: test_play.rs
tools/pc-control/src/: lib.rs  main.rs  prelude.rs
tools/pc-control/src/handlers/: mod.rs  play.rs  volume.rs
tools/pc-control/src/utils/: mod.rs
tools/pc/src/: error.rs  lib.rs  main.rs  settings.rs
tools/pc/src/handlers/: mod.rs  power.rs
tools/smart-home/sketch/: sketch.ino
tools/smart-home/src/: main.rs  settings.rs
tools/smart-home/src/remote/: action.rs
tools/system/: .gitignore  Cargo.toml  Ovsy.toml  Playlist.m3u
tools/system/src/: error.rs  lib.rs  main.rs  prelude.rs
tools/system/src/handlers/: app.rs  mod.rs  music.rs  play.rs  power.rs  wait.rs
tools/system/src/utils/: dir.rs
