[workspace]
members = ["crates/cli", "crates/core", "crates/share", "agents/system"]
default-members = ["crates/cli", "crates/core", "agents/system"]
resolver = "3"

[workspace.dependencies]
ovsy-share = { path = "crates/share" }
atoman = { version = "0.2.22", features = ["full"] }
macron = { version = "0.1.18", features = ["full"] }
pearce = "0.1.0"
anylm = "0.1.23"
cistern = "0.1.0"
tokio = { version = "1.51.0", features = ["full"] }
async-recursion = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.0"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
