# Copyright (C) 2026 Bulat Sh. (fuderis) <synapdrake@ya.ru>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <httpswww.gnu.org/licenses/>.

[workspace]
members = ["crates/cli", "crates/core", "crates/share", "agents/system"]
default-members = ["crates/cli", "crates/core", "agents/system"]
resolver = "3"

[workspace.dependencies]
ovsy-share = { path = "crates/share" }
atoman = { version = "0.2.22", features = ["full"] }
macron = { version = "0.1.18", features = ["full"] }
pearce = "0.1.0"
anylm = "0.1.23"
cistern = "0.1.0"
tokio = { version = "1.51.0", features = ["full"] }
async-recursion = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.0"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
