[package]
name = "agent"
edition = "2024"

[dependencies]
axum = "0.8.8"
macron = { version = "^0.1.16", features = ["full"] }
atoman = { version = "^0.2.9", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "1.0.7"
chrono = "0.4.42"
