[package]
name = "music"
edition = "2024"

[lib]
name = "root"

[dependencies]
axum = "0.8.8"
macron = { version = "^0.1.14", features = ["full"] }
atoman = { version = "^0.2.5", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
fuzzy-cmp = "0.1.3"
chrono = "0.4.42"
