[package]
name = "power"
edition = "2024"

[lib]
name = "root"

[dependencies]
macron = { version = "^0.1.14", features = ["full"] }
atoman = { version = "^0.2.5", features = ["full"] }
axum = "0.8.8"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.8"
chrono = "0.4.42"
