[package]
name = "system-agent"
edition = "2024"

[dependencies]
ovsy-share.workspace = true
tokio.workspace = true
macron.workspace = true
atoman.workspace = true
pearce.workspace = true
anylm.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
regex.workspace = true
chrono.workspace = true
