[package]
name = "ovsy-cli"
edition = "2024"

[dependencies]
fudes-basic = { workspace = true }
ovsy-shared = { workspace = true }
anylm = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
