[package]
name = "ovsy-cli"
edition = "2024"

[dependencies]
ovsy-share.workspace = true
atoman.workspace = true
macron.workspace = true
anylm.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
ratatui = "0.30.0"
crossterm = "0.29.0"
textwrap = "0.16.2"
hyperrat = "0.1.1"
unicode-width = "0.2.2"
colored = "3.1.1"
