[package]
name = "ovsy-core"
edition = "2024"

[dependencies]
ovsy-share.workspace = true
atoman.workspace = true
macron.workspace = true
pearce.workspace = true
anylm.workspace = true
cistern.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-recursion.workspace = true
