# Copyright (C) 2026 Bulat Sh. (fuderis) <synapdrake@ya.ru>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "ovsy"
edition = "2024"

[dependencies]
ovsy-share.workspace = true
atoman.workspace = true
macron.workspace = true
pearce.workspace = true
anylm.workspace = true
cistern.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true
clap.workspace = true
libc = "0.2.186"
boa_engine = "0.21.1"
ratatui = "0.30.0"
crossterm = "0.29.0"
textwrap = "0.16.2"
hyperrat = "0.1.1"
unicode-width = "0.2.2"
colored = "3.1.1"
