[package]
name = "pc-control"
edition = "2024"

[lib]
name = "root"

[dependencies]
macron = { version = "^0.1.13", features = ["full"] }
atoman = { version = "^0.2.2", features = ["full"] }
axum = "0.8.8"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.8"
fuzzy-cmp = "0.1.3"
chrono = "0.4.42"
pc-remote = "0.1.1"
